fixed a bug that caused tooltips to be cut off in safari

--- a/src/pages/ResultsPage.module.css
+++ b/src/pages/ResultsPage.module.css
@@ -162,6 +162,7 @@
     opacity: 0;
     visibility: hidden;
     transition: all 0.2s ease;
+    will-change: transform;
     pointer-events: none;
     user-select: none;
 }
